--- a/lab3/pubspec.yaml
+++ b/lab3/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
   flutter_map_marker_cluster: ^1.0.2
+  polyline: ^1.0.2
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
